--- a/scalar.config.json
+++ b/scalar.config.json
@@ -10,6 +10,10 @@
           "type": "page"
         },
         {
+          "path": "docs/bots_config_options.md",
+          "type": "page"
+        },
+        {
           "path": "docs/webhooks.md",
           "type": "page"
         },
